added additional property to Blueprint