@@ -1,9 +1,9 @@
 package com.example.pandatribe.repositories;
 
+import com.example.pandatribe.models.industry.blueprints.BlueprintActivity;
 import com.example.pandatribe.models.market.Category;
 import com.example.pandatribe.models.results.Blueprint;
 import com.example.pandatribe.models.results.SystemName;
-import com.example.pandatribe.models.industry.blueprints.BlueprintActivity;
 import com.example.pandatribe.models.universe.Region;
 import com.example.pandatribe.models.universe.Station;
 import com.example.pandatribe.models.universe.SystemInfo;
@@ -14,9 +14,9 @@ import jakarta.persistence.Tuple;
 import org.springframework.stereotype.Repository;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Repository
 public class EveCustomRepositoryImpl implements EveCustomRepository {
@@ -24,7 +24,7 @@ public class EveCustomRepositoryImpl implements EveCustomRepository {
     @PersistenceContext
     private EntityManager entityManager;
 
-@Transactional
+    @Transactional
     @Override
     public BlueprintActivity getBluePrintInfoByProduct(Integer productId) {
         String nativeQuery = "SELECT quantity,typeID,activityID FROM industryActivityProducts iap WHERE productTypeID=:productId ";
@@ -50,33 +50,36 @@ public class EveCustomRepositoryImpl implements EveCustomRepository {
     }
 
     @Transactional
-    public SystemInfo getSystemInfo(String systemName){
+    public SystemInfo getSystemInfo(String systemName) {
         String nativeQuery = "SELECT solarSystemID, security FROM mapSolarSystems  WHERE solarSystemName = :systemName";
-        List<Object[]> result = entityManager.createNativeQuery(nativeQuery).setParameter("systemName",systemName).getResultList();
+        List<Object[]> result = entityManager.createNativeQuery(nativeQuery).setParameter("systemName", systemName).getResultList();
         return result.isEmpty() ? null : SystemInfo.builder().systemId((Integer) result.get(0)[0]).security((Double) result.get(0)[1]).build();
     }
 
     @Transactional
-    public List<SystemName> getSystems(){
+    public List<SystemName> getSystems() {
         String nativeQuery = "SELECT solarSystemName FROM mapSolarSystems";
         List<Object> result = entityManager.createNativeQuery(nativeQuery).getResultList();
-        return result.stream().map(name-> SystemName.builder().systemName((String) name).build()).collect(Collectors.toList());
+        return result.stream().map(name -> SystemName.builder().systemName((String) name).build()).toList();
     }
+
     @Transactional
-    public Integer getVolume(Integer typeId){
+    public Integer getVolume(Integer typeId) {
         String nativeQuery = "SELECT volume FROM invVolumes WHERE typeID = :typeId";
-        List<Object> result = entityManager.createNativeQuery(nativeQuery).setParameter("typeId",typeId).getResultList();
+        List<Object> result = entityManager.createNativeQuery(nativeQuery).setParameter("typeId", typeId).getResultList();
         return result.isEmpty() ? null : (Integer) result.get(0);
     }
 
     @Transactional
-    public List<Blueprint> getBlueprints(){
-        String nativeQuery = "SELECT typeID, productTypeID FROM industryActivityProducts WHERE activityID = 1 OR activityID = 11";
+    public List<Blueprint> getBlueprints() {
+        String nativeQuery = "SELECT typeID, productTypeID, activityID FROM industryActivityProducts WHERE activityID = 1 OR activityID = 11";
         List<Tuple> result = entityManager.createNativeQuery(nativeQuery, Tuple.class).getResultList();
-        return result.stream().map(row-> Blueprint.builder().bpId((Integer) row.get("typeID"))
-                        .blueprint(getBlueprintName((Integer) row.get("productTypeID"))).build())
-                .filter(name-> Objects.nonNull(name.getBlueprint()))
-                .filter(name-> !name.getBlueprint().contains("Edition")).toList();
+        return result.stream().map(row -> Blueprint.builder().bpId((Integer) row.get("typeID"))
+                        .blueprint(getBlueprintName((Integer) row.get("productTypeID")))
+                        .activity((Integer) row.get("activityID"))
+                        .build())
+                .filter(name -> Objects.nonNull(name.getBlueprint()))
+                .filter(name -> !name.getBlueprint().contains("Edition")).toList();
     }
 
     @Transactional
@@ -99,13 +102,13 @@ public class EveCustomRepositoryImpl implements EveCustomRepository {
 
     @Override
     public List<Category> getCategories() {
-        return null;
+        return new ArrayList<>();
     }
 
 
-    private String getBlueprintName(Integer id){
+    private String getBlueprintName(Integer id) {
         String nativeQuery = "SELECT typeName FROM invTypes WHERE typeID = :id";
-        List<Object> result = entityManager.createNativeQuery(nativeQuery).setParameter("id",id).getResultList();
+        List<Object> result = entityManager.createNativeQuery(nativeQuery).setParameter("id", id).getResultList();
         return result.isEmpty() ? null : (String) result.get(0);
     }
 }
